--- a/force-app/main/default/layouts/Loan_Charge__c-Loan Charge Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Loan_Charge__c-Loan Charge Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Readonly</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Processing_Order__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
